--- a/translations/en.json
+++ b/translations/en.json
@@ -1,1 +1,5 @@
-{ "welcome": "Welcome to Enerthic 💪" }
+{
+  "title": "Cart",
+  "description": "Review your items before purchase.",
+  "empty": "Your cart is empty."
+}
