--- a/translations/es.json
+++ b/translations/es.json
@@ -1,1 +1,5 @@
-{ "welcome": "Bienvenido a Enerthic 💪" }
+{
+  "title": "Carrito",
+  "description": "Revisa tus artículos antes de comprar.",
+  "empty": "Tu carrito está vacío."
+}
